...
                }
                .tag(5)
            
            MoreView(selectedTab: $nav.selectedTab)
                .environmentObject(nav)
                .tabItem {
                    Label("More", systemImage: "ellipsis")
                }
                .tag(4)
            }
                .tint(themeManager.colors.primary)
                .accentColor(themeManager.colors.primary)
                #if os(iOS)
...
